data/raw_logs/syntactic/syn_17.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_17.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_17.c:1:14: error: 'return' with no value, in function returning non-void [-Wreturn-mismatch]
    1 | int main() { return; 0; }
      |              ^~~~~~
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_17.c:1:5: note: declared here
    1 | int main() { return; 0; }
      |     ^~~~
